crates/test-files/fixtures/compile_errors/invalid_string_field.fe
contract Foo {
    pub fn foo() {
        "".does_not_exist
    }
}
